Added doc for update product
